--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.28.1
-google-generativeai==0.3.2
-yfinance==0.2.18
-pandas==2.0.3
-python-dotenv==1.0.0
-langchain==0.0.350
-langchain-google-genai==0.0.6
-plotly==5.17.0
+streamlit
+python-dotenv
+pandas
+yfinance
+plotly
+google-generativeai
+reportlab
