Add logging functionality and deployment documentation; implement security and rate limiting middleware

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-streamlit
-python-dotenv
-pandas
-yfinance
-plotly
-google-generativeai
-reportlab
-fastapi
-uvicorn
-sqlmodel
-python-jose[cryptography]
-passlib[bcrypt]
-python-multipart
-httpx
-fastapi-limiter
-redis
-aiofiles
+streamlit>=1.28.0
+python-dotenv>=1.0.0
+pandas>=2.0.0
+yfinance>=0.2.18
+plotly>=5.15.0
+google-generativeai>=0.3.0
+reportlab>=4.0.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+sqlmodel>=0.0.8
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.6
+httpx>=0.25.0
+fastapi-limiter>=0.1.5
+redis>=5.0.0
+aiofiles>=23.2.0
+python-multipart>=0.0.6
