--- a/env.example
+++ b/env.example
@@ -8,6 +8,11 @@ SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# Admin Configuration
+ADMIN_EMAIL=admin@finadvisor.com
+ADMIN_PASSWORD=AdminPass123!
+ADMIN_FULL_NAME=System Administrator
+
 # Google Gemini AI API
 GEMINI_API_KEY=your-gemini-api-key-here
 
