Enhance application logging and startup scripts by adding detailed logs for service initialization and Redis status checks. Update environment configuration to include optional Redis settings for rate limiting. Refactor terminal command execution for better compatibility across platforms, and implement cleanup for temporary script files after service startup.

--- a/env.example
+++ b/env.example
@@ -24,16 +24,15 @@ CORS_ORIGINS=http://localhost:8501,http://localhost:3000
 ENABLE_HTTPS=false
 DEBUG_MODE=true
 
-# Rate Limiting
+# Rate Limiting (Redis is optional)
 RATE_LIMIT_PER_MINUTE=60
 RATE_LIMIT_PER_HOUR=1000
+REDIS_ENABLED=false
+REDIS_URL=redis://localhost:6379
 
 # Logging
 LOG_LEVEL=INFO
 LOG_FILE=app.log
-
-# Redis (for rate limiting and caching)
-REDIS_URL=redis://localhost:6379
 
 # Export Settings
 MAX_EXPORT_SIZE_MB=10
